--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "landingpage-react-template",
+  "name": "pioxno",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
+    "@mui/styles": "^5.16.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emailjs-com": "^2.6.4",
+    "mdb-react-ui-kit": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
     "smooth-scroll": "^16.1.3"
   },
