--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.13.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
